--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/traverse": "^7.23.3",
     "@babel/types": "^7.23.0",
     "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
     "prettier": "^3.1.0"
   }
 }
